.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Project__c.object
<CustomObject>
    <description>Used in Timesheets, Expenses and as required</description>
    <fields>
        <fullName>xcdhcm__Days_approved__c</fullName>
        <formula>xcdhcm__Hours_booked__c  /  xcdhcm__Standard_project_hours_per_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days approved - total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Days_booked__c</fullName>
        <formula>xcdhcm__Hours_booked__c /   xcdhcm__Standard_project_hours_per_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days booked - total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Days_booked_current_month__c</fullName>
        <formula>xcdhcm__Hours_booked_current_month__c /  xcdhcm__Standard_project_hours_per_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days booked - current month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Days_booked_last_month__c</fullName>
        <formula>xcdhcm__Hours_booked_last_month__c / xcdhcm__Standard_project_hours_per_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days booked - last month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_approved__c</fullName>
        <label>Hours approved</label>
        <summarizedField>xcdhcm__Project_Timesheet__c.xcdhcm__Hours_number__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Project_Timesheet__c.xcdhcm__Timesheet_approved__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Project_Timesheet__c.xcdhcm__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_approved_total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Used to sum total hours approved against this project.  Summed using rollup lookup</description>
        <label>Hours approved - total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_booked__c</fullName>
        <label>Hours booked - total</label>
        <summarizedField>xcdhcm__Project_Timesheet__c.xcdhcm__Hours_number__c</summarizedField>
        <summaryForeignKey>xcdhcm__Project_Timesheet__c.xcdhcm__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_booked_current_month__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sums Hours booked against the project where Current month = true
Populated by rollup</description>
        <label>Hours booked - current month</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_booked_last_month__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Sums Hours booked against the project where Previous month = True - Sum populated by rollup</description>
        <label>Hours booked - last month</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Plan_effort_days__c</fullName>
        <label>Plan effort - days</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Plan_effort_hours__c</fullName>
        <formula>xcdhcm__Plan_effort_days__c *  xcdhcm__Standard_project_hours_per_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan effort - hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Project_lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project lead</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Standard_project_hours_per_day__c</fullName>
        <label>Standard project hours per day</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_approved_expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total expenses booked and approved against the project</description>
        <inlineHelpText>Total expenses booked and approved against the project</inlineHelpText>
        <label>Total approved expenses</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Project_lead__c</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Project name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>